# tg-bot-weather

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml  release.yml
src/bot/: __init__.py  __main__.py  config.py
src/bot/database/: __init__.py  models.py  repo.py  session.py
src/bot/handlers/: __init__.py  common.py  favorites.py  find.py  inline.py  menu.py  settings.py
src/bot/keyboards/: __init__.py  common.py
src/bot/locales/en/: main.ftl
src/bot/locales/ru/: main.ftl
src/bot/middlewares/: __init__.py  db.py  i18n.py
src/bot/services/: __init__.py  cache.py  formatters.py  i18n.py  weather.py
src/bot/states/: __init__.py  weather.py
tests/: conftest.py  test_cache.py  test_config.py  test_formatters.py  test_i18n.py  test_repo.py  test_weather.py
